@@ -1,0 +1,1 @@
+(define-package "aggressive-indent" "20160115.1414" "Minor mode to aggressively keep your code always indented" '((emacs "24.1") (cl-lib "0.5")) :url "https://github.com/Malabarba/aggressive-indent-mode" :keywords '("indent" "lisp" "maint" "tools"))
